# paper-decomposer

./: .gitignore  ACTUAL_IMPLEMENTATION.md  CLAUDE.md  IMPLEMENTATION.md  README.md  TASKS.md  config.yaml  main.py  pyproject.toml  tasks.md
fixtures/: README.md
output/: Efficient_Memory_Management_for_Large_Language_Model_Serving.json  Efficient_Memory_Management_for_Large_Language_Model_Serving_2.json  Efficient_Memory_Management_for_Large_Language_Model_Serving_3.json  Efficient_Memory_Management_for_Large_Language_Model_Serving_4.json  Efficient_Memory_Management_for_Large_Language_Model_Serving_5.json  Efficient_Memory_Management_for_Large_Language_Model_Serving_6.json  Efficient_Memory_Management_for_Large_Language_Model_Serving_7.json  README.md
paper_decomposer/: README.md  __init__.py
src/: README.md
src/paper_decomposer/: README.md  __init__.py  cli.py  config.py  (+4 more)
tests/: README.md  test_config.py  test_config_semantics.py  test_db_schema.py  test_dedup.py  test_extraction_big_model.py  test_extraction_cli.py  test_extraction_db_write_plan.py  test_extraction_db_writer.py  test_extraction_evidence.py  test_extraction_heavy_cleanup.py  test_extraction_prompts.py  test_extraction_repair.py  test_extraction_resolution.py  test_extraction_sanitize.py  test_extraction_stages.py  test_extraction_targeted_repair.py  test_extraction_validators.py  test_facets.py  test_models.py  test_models_semantics.py  test_pdf_parser.py  test_pipeline.py  test_pipeline_v21.py  test_schema.py  test_schema_semantics.py  test_section.py  test_section_digest.py  test_tree.py
(+21 files in other folders)
